--- a/fapi.env
+++ b/fapi.env
@@ -1,2 +1,6 @@
-FIREBASE_API_KEY=your_api_key
-FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
+FIREBASE_API_KEY="AIzaSyAoMC6SE58fC58uDB0fbtU1YyigLE5DDvU",
+FIREBASE_AUTH_DOMAIN="flashcardio-11.firebaseapp.com",
+FIREBASE_PROJECT_ID="flashcardio-11",
+FIREBASE_STORAGE_BUCKET="flashcardio-11.firebasestorage.app",
+FIREBASE_MESSAGING_SENDER_ID="669106215792",
+FIREBASE_APP_ID="1:669106215792:web:b1e9240a314abc7d6bcdb5"
